Fixed accordion on mobile versions

--- a/arilewp-pro-child-theme/style.css
+++ b/arilewp-pro-child-theme/style.css
@@ -76,7 +76,7 @@ h1 {
     /*margin: 90px auto;*/
     /*padding: 45px 45px;*/
 }
-.accordion .container {
+.accordion .acontainer {
     position: relative;
     margin: 20px 20px;
     border: 2px solid #3fef00;
@@ -115,7 +115,7 @@ h1 {
 }
 
 
-.accordion .container.active .content {
+.accordion .acontainer.active .content {
     height: auto;
     margin: auto 10px 20px;
     padding-bottom: 10px;
